- Added a drop shadow to most buttons - Imported OneSginal Dependencies and implemented necessary Retrieve methods

--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -74,6 +74,7 @@
             android:text="@string/CSEmergencyButton"
             android:id="@+id/CSEmergencyButton"/>
 
+        <!-- Pull Up Buttons Container -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -109,6 +110,7 @@
                 android:id="@+id/CSLicencesButton" />
         </RelativeLayout>
 
+        <!-- Pull up Buttons Toggel Button -->
         <Button
             style="@style/LyonsButtonStyle"
             android:layout_width="wrap_content"
