--- a/app/src/main/res/layout/course_actvity.xml
+++ b/app/src/main/res/layout/course_actvity.xml
@@ -157,7 +157,7 @@
         android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:padding="5dp"
-        android:background="@color/accent"
+        android:background="@drawable/button_background"
         android:text="@string/CourseSSubmitButtonText"
         android:textColor="@color/whiteText"
         android:onClick="submitChanges"
