- Information form mostly done. needs further testing. - AnnouncementActivity pushAnnouncements works. minor change needs to be tested.

--- a/app/src/main/res/layout/contact_activity.xml
+++ b/app/src/main/res/layout/contact_activity.xml
@@ -137,6 +137,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_above="@id/CSButtonContainer"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/arrow_up_48dp"
                 android:onClick="toggleButtons"
                 android:id="@+id/CSToggleButton"/>
