--- a/app/src/main/res/layout/information_form_activity.xml
+++ b/app/src/main/res/layout/information_form_activity.xml
@@ -23,7 +23,7 @@
     <!-- Student's Information Form -->
     <LinearLayout
         android:id="@+id/IFSSLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -36,13 +36,15 @@
             android:text="@string/IFSName"
             android:textAlignment="center"
             android:textSize="15sp"
-            android:textColor="@color/accent"/>
+            android:textColor="@color/accent" />
         <EditText
             android:id="@+id/IFSSNameField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="15sp"/>
+            android:textSize="15sp"
+            android:maxLines="1"
+            android:inputType="textCapWords|textCapSentences" />
 
         <TextView
             android:id="@+id/IFSGradeLabel"
@@ -55,21 +57,26 @@
         <Spinner
             android:id="@+id/IFSGradeSpinner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:entries="@array/IFSGrades"
+            android:prompt="@string/IFSGradePrompt"
+            />
 
-        <Button
-            style="@style/LyonsButtonStyle"
-            android:id="@+id/IFSSCompleteButton"
-            android:layout_gravity="center"
-            android:text="@string/IFSCompleteButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <!--<Button-->
+            <!--style="@style/LyonsButtonStyle"-->
+            <!--android:id="@+id/IFSSCompleteButton"-->
+            <!--android:onClick="buttonPressed"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:text="@string/IFSCompleteButton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content" />-->
     </LinearLayout>
 
     <!-- Teacher's Information Form -->
     <LinearLayout
         android:id="@+id/IFSTLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
@@ -87,47 +94,69 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:maxLines="1"
+            android:inputType="textCapWords|textCapSentences" />
 
         <TextView
             android:id="@+id/IFSDepartmentLabel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/IFTDepartment"
+            android:padding="5dp"
             android:textSize="15sp"
             android:textAlignment="center"
             android:textColor="@color/accent"/>
         <Spinner
             android:id="@+id/IFSDepartmentSpinner"
             android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:entries="@array/IFTDepartments"
+            android:prompt="@string/IFTDepartmentPrompt"
             android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/IFSEmailLabel"
             android:layout_width="match_parent"
             android:layout_height="30sp"
+            android:padding="5dp"
             android:text="@string/IFTContactEmail"
             android:textSize="15sp"
             android:textAlignment="center"
-            android:textColor="@color/accent"/>
+            android:textColor="@color/accent" />
         <EditText
             android:id="@+id/IFSEmailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:maxLines="1" />
+
+
 
     </LinearLayout>
 
     <Button
         style="@style/LyonsButtonStyle"
-        android:id="@+id/IFSTCompleteButton"
-        android:layout_gravity="center"
+        android:id="@+id/IFCompleteButton"
         android:text="@string/IFTCompleteButton"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/IFSTLayout"
-        android:layout_alignLeft="@+id/IFSTLayout"
-        android:layout_alignStart="@+id/IFSTLayout"
-        android:layout_marginTop="23dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_centerHorizontal="true"
+        android:onClick="buttonPressed"/>
+    <!--android:layout_above="@+id/IFNote"-->
+
+    <TextView
+        android:text="@string/IFSTeacherNote"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="10sp"
+        android:id="@+id/IFNote"
+        android:textColor="@color/accentDark"
+        android:editable="false"/>
 </RelativeLayout>
