--- a/app/src/main/res/layout/info_activity.xml
+++ b/app/src/main/res/layout/info_activity.xml
@@ -21,24 +21,29 @@
         android:layout_below="@id/toolbar"
         android:orientation="vertical">
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_marginBottom="0dp"
             android:maxLines="2"
+            android:enabled="false"
+            android:background="@color/caldroid_transparent"
             android:gravity="start"
             android:textColor="@color/accent"
             android:textSize="@dimen/textSize24Title"
             android:id="@+id/ISTitleLabel"/>
 
-        <TextView
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2"
+            android:enabled="false"
+            android:gravity="start"
             android:layout_marginTop="8dp"
             android:layout_margin="16dp"
             android:layout_marginBottom="0dp"
+            android:background="@color/caldroid_transparent"
             android:textColor="@color/accent"
             android:textSize="@dimen/textSize20Subtitle"
             android:id="@+id/ISDescriptionLabel"/>
@@ -50,21 +55,25 @@
             android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@color/caldroid_transparent"
+                android:enabled="false"
                 android:textColor="@color/accent"
                 android:textSize="@dimen/textSize14Details"
                 android:id="@+id/ISDateLabel"/>
 
-            <TextView
+            <EditText
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="@color/caldroid_transparent"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:gravity="right|end"
+                android:enabled="false"
                 android:textColor="@color/accent"
                 android:textSize="@dimen/textSize14Details"
                 android:id="@+id/ISLocationLabel"/>
