- Updated App Icon - Made the app portrait mode fixed - Fixed an offline issue in Home - Minor changes to ClubActivity - Contact Pull up now fixed - User:     - Pull up now fixed     - Info Editing fixed     - Added confirmation dialog before pass reset and account delete     - signout crash fixed - Removed title bar from login activity - Other changes and minor fixes

--- a/app/src/main/res/layout/club_activity.xml
+++ b/app/src/main/res/layout/club_activity.xml
@@ -14,6 +14,7 @@
         android:id="@+id/toolbar">
     </android.support.v7.widget.Toolbar>
 
+    <!-- Title & Info COntainer -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -98,6 +99,7 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <!-- Club Leaders Label -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
