--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -332,8 +332,12 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/HSCourseContainer"
             android:id="@+id/HSNoInternet"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:text="@string/HSNoInternetLabel"
-            android:textSize="35sp"
+            android:textSize="18sp"
             android:visibility="invisible"
             android:textAlignment="center"/>
     </RelativeLayout>
