--- a/app/src/main/res/menu/done_menu.xml
+++ b/app/src/main/res/menu/done_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:title="@string/addAction"
-        android:icon="@drawable/ic_add_black_24dp"
-        android:id="@+id/addAction"
+        android:title="@string/doneAction"
+        android:icon="@drawable/ic_done_black_24dp"
+        android:id="@+id/doneAction"
         app:showAsAction="ifRoom"/>
 </menu>
