--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -137,6 +137,8 @@
     <style name="UserParameterLabel">
         <item name="android:layout_width">@dimen/USTextLabelWidth</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:maxLines">1</item>
         <item name="android:gravity">end</item>
         <item name="android:textColor">@color/accent</item>
@@ -146,13 +148,9 @@
     <style name="UserParameterField">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_marginLeft">5dp</item>
-        <item name="android:cursorVisible">false</item>
-        <item name="android:focusableInTouchMode">false</item>
-        <item name="android:focusable">false</item>
-        <item name="android:enabled">false</item>
-        <item name="android:clickable">false</item>
-        <item name="android:inputType">none</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/accent</item>
     </style>
