--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -38,7 +38,7 @@
             android:padding="0dp"
             android:background="@drawable/segmented_button"
             android:text="@string/LSSignUpButton"
-            android:textColor="@color/segmentedButtonUnselected"
+            android:textColor="@color/text_view_edit"
             android:textSize="12sp"
             android:textAllCaps="false"
             android:tag="signup"
@@ -57,7 +57,7 @@
             android:padding="0dp"
             android:background="@drawable/segmented_button"
             android:text="@string/LSLoginButton"
-            android:textColor="@color/segmentedButtonUnselected"
+            android:textColor="@color/text_view_edit"
             android:textSize="12sp"
             android:textAllCaps="false"
             android:tag="login"
