- HomeActivity time table fixed. courses switch - CalendarActivity date label on top has double tap sensing - LoginActivity and UserActivity have permanent underline for text fields - LoginActivity loading toast added and works

--- a/app/src/main/res/layout/course_actvity.xml
+++ b/app/src/main/res/layout/course_actvity.xml
@@ -49,6 +49,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:hint="@string/CourseSNameHint"
+            android:inputType="textCapWords"
             android:textSize="16sp"
             android:textColor="@color/blackText"
             android:id="@+id/CourseSNameField"/>
@@ -113,6 +114,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:hint="@string/CourseSTeacherHint"
+            android:inputType="textCapWords"
             android:textSize="16sp"
             android:textColor="@color/blackText"
             android:id="@+id/CourseSTeacherField"/>
@@ -144,7 +146,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:hint="@string/CourseSRoomHint"
-            android:inputType=""
+            android:inputType="textCapCharacters"
             android:textSize="16sp"
             android:textColor="@color/blackText"
             android:id="@+id/CourseSRoomField"/>
