--- a/app/src/main/res/layout/user_activity.xml
+++ b/app/src/main/res/layout/user_activity.xml
@@ -25,27 +25,43 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/toolbar">
+            android:layout_below="@id/toolbar"
+            android:gravity="center_horizontal">
 
             <!-- Display Name Container -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="21dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:orientation="horizontal"
-                android:id="@+id/USDisplayName">
+                android:id="@+id/USDisplayName"
+                android:gravity="center_horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true">
 
                 <!-- Display Name Label -->
                 <TextView
                     style="@style/UserParameterLabel"
                     android:text="@string/USName"
-                    android:id="@+id/USNameLabel"/>
+                    android:id="@+id/USNameLabel"
+                    android:textSize="@dimen/textSize15Field"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"
+                    />
 
                 <!-- Display Name Field -->
                 <TextView
                     style="@style/UserParameterField"
                     android:hint="@string/USNameHint"
-                    android:id="@+id/USNameField"/>
+                    android:id="@+id/USNameField"
+                    android:gravity="center_horizontal"
+                    android:background="@drawable/text_field_bottom_border"
+                    android:layout_width="match_parent" />
             </LinearLayout>
 
             <!-- Email Container -->
@@ -55,19 +71,30 @@
                 android:layout_below="@id/USDisplayName"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal"
-                android:id="@+id/USEmail">
+                android:id="@+id/USEmail"
+                android:gravity="center_horizontal"
+                android:textSize="@dimen/textSize15Field"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
                 <!-- Email Label -->
                 <TextView
                     style="@style/UserParameterLabel"
                     android:text="@string/USEmail"
-                    android:id="@+id/USEmailLabel"/>
+                    android:id="@+id/USEmailLabel"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"/>
 
                 <!-- Email Field -->
                 <TextView
                     style="@style/UserParameterField"
                     android:hint="@string/USEmailHint"
-                    android:id="@+id/USEmailField"/>
+                    android:id="@+id/USEmailField"
+                    android:gravity="center_horizontal"
+                    android:background="@drawable/text_field_bottom_border"
+                    android:layout_width="match_parent" />
             </LinearLayout>
 
             <!-- Access Container -->
@@ -77,19 +104,31 @@
                 android:layout_below="@id/USEmail"
                 android:layout_marginTop="5dp"
                 android:orientation="horizontal"
-                android:id="@+id/USAccess">
+                android:id="@+id/USAccess"
+                android:textSize="@dimen/textSize15Field"
+                android:gravity="center_horizontal"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
                 <!-- Access Label -->
                 <TextView
                     style="@style/UserParameterLabel"
                     android:text="@string/USAccess"
-                    android:id="@+id/USAccessLabel"/>
+                    android:id="@+id/USAccessLabel"
+                    android:gravity="center_horizontal"
+                    android:layout_marginRight="30dp"
+                    android:layout_marginEnd="30dp"/>
 
                 <!-- Access Field -->
                 <TextView
                     style="@style/UserParameterField"
                     android:hint="@string/USAccessHint"
-                    android:id="@+id/USAccessField"/>
+                    android:id="@+id/USAccessField"
+                    android:gravity="center_horizontal"
+                    android:background="@drawable/text_field_bottom_border"
+                    android:layout_width="match_parent" />
             </LinearLayout>
 
             <TableLayout
@@ -107,7 +146,8 @@
                         android:text="@string/USLeaderButtonText"
                         android:paddingBottom="8dp"
                         android:onClick="promptClubCode"
-                        android:id="@+id/USLeaderButton" />
+                        android:id="@+id/USLeaderButton"
+                        android:textSize="@dimen/textSize15Button"/>
 
                     <!-- Sign out Button -->
                     <Button
@@ -117,7 +157,8 @@
                         android:text="@string/USSignOutButtonText"
                         android:tag="signOut"
                         android:id="@+id/USSignOut"
-                        android:onClick="UAButtons" />
+                        android:onClick="UAButtons"
+                        android:textSize="@dimen/textSize15Button"/>
                 </TableRow>
 
                 <TableRow>
@@ -129,7 +170,8 @@
                         android:text="@string/USDeleteButtonText"
                         android:tag="deleteAcc"
                         android:id="@+id/USDelete"
-                        android:onClick="UAButtons" />
+                        android:onClick="UAButtons"
+                        android:textSize="@dimen/textSize15Button"/>
 
                     <!-- Reset Password Button -->
                     <Button
@@ -139,7 +181,8 @@
                         android:text="@string/USResetPassButtonText"
                         android:tag="resetPass"
                         android:id="@+id/USReset"
-                        android:onClick="UAButtons" />
+                        android:onClick="UAButtons"
+                        android:textSize="@dimen/textSize15Button"/>
                 </TableRow>
             </TableLayout>
 
